Bug 217430 - Kopete asserts (row model method called with invalid arguments) [QAbstractItemModel::beginRemoveRows, Kopete::ChatSessionMembersListModel::slotContactRemoved, Kopete::ChatSessionMembersListModel::slotContactStatusChanged]
Summary: Kopete asserts (row model method called with invalid arguments) [QAbstractIte...
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 217850 224661 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-12-05 13:14 UTC by Alex Merry
Modified: 2010-01-29 00:15 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi: --- Another backtrace, using KDE trunk from a few days ago. (11.31 KB, text/plain)
2009-12-22 23:58 UTC, Alex Merry
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Merry 2009-12-05 13:14:58 UTC
Application: kopete (0.99.80)
KDE Platform Version: 4.3.80 (KDE 4.3.80 (KDE 4.4 Beta1)) (Compiled from sources)
Qt Version: 4.6.1
Operating System: Linux 2.6.31-ARCH x86_64
Distribution (Platform): Archlinux Packages

-- Information about the crash:
I was not doing anything at the time - the screen was locked.

 -- Backtrace:
Application: Kopete (kopete), signal: Aborted
[Current thread is 1 (Thread 0x7fce22e9a760 (LWP 3785))]

Thread 2 (Thread 0x7fce0b405710 (LWP 3807)):
#0  0x00007fce1e6e307c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fce1e98bd63 in QWaitConditionPrivate::wait (this=0x2c7ae20, time=18446744073709551615) at /home/kde-devel/src/qt/src/corelib/thread/qwaitcondition_unix.cpp:87
#2  0x00007fce1e98bb0b in QWaitCondition::wait (this=0x2c7a9b0, mutex=0x2c7a9a8, time=18446744073709551615) at /home/kde-devel/src/qt/src/corelib/thread/qwaitcondition_unix.cpp:159
#3  0x00007fce1ff64678 in QHostInfoAgent::run (this=0x2c7a990) at /home/kde-devel/src/qt/src/network/kernel/qhostinfo.cpp:252
#4  0x00007fce1e98a998 in QThreadPrivate::start (arg=0x2c7a990) at /home/kde-devel/src/qt/src/corelib/thread/qthread_unix.cpp:244
#5  0x00007fce1e6de81a in start_thread () from /lib/libpthread.so.0
#6  0x00007fce1cb7e8cd in clone () from /lib/libc.so.6
#7  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fce22e9a760 (LWP 3785)):
[KCrash Handler]
#5  0x00007fce1cae2045 in raise () from /lib/libc.so.6
#6  0x00007fce1cae3470 in abort () from /lib/libc.so.6
#7  0x00007fce1e98021f in qt_message_output (msgType=QtFatalMsg, buf=0x2d3d0b8 "ASSERT: \"first >= 0\" in file /home/kde-devel/src/qt/src/corelib/kernel/qabstractitemmodel.cpp, line 2443")
    at /home/kde-devel/src/qt/src/corelib/global/qglobal.cpp:2226
#8  0x00007fce1e9802ca in qt_message (msgType=QtFatalMsg, msg=0x7fce1eb10510 "ASSERT: \"%s\" in file %s, line %d", ap=0x7fff889eeab0) at /home/kde-devel/src/qt/src/corelib/global/qglobal.cpp:2272
#9  0x00007fce1e9809c4 in qFatal (msg=0x7fce1eb10510 "ASSERT: \"%s\" in file %s, line %d") at /home/kde-devel/src/qt/src/corelib/global/qglobal.cpp:2455
#10 0x00007fce1e97fe4a in qt_assert (assertion=0x7fce1eb5a4e8 "first >= 0", file=0x7fce1eb5a270 "/home/kde-devel/src/qt/src/corelib/kernel/qabstractitemmodel.cpp", line=2443)
    at /home/kde-devel/src/qt/src/corelib/global/qglobal.cpp:1989
#11 0x00007fce1ea8cd3f in QAbstractItemModel::beginRemoveRows (this=0x290de60, parent=..., first=-1, last=-1) at /home/kde-devel/src/qt/src/corelib/kernel/qabstractitemmodel.cpp:2443
#12 0x00007fce21b3067d in Kopete::ChatSessionMembersListModel::slotContactRemoved (this=0x290de60, contact=0x2aae700)
    at /home/kde-devel/src/KDE/kdenetwork/kopete/libkopete/chatsessionmemberslistmodel.cpp:220
#13 0x00007fce21b3078d in Kopete::ChatSessionMembersListModel::slotContactStatusChanged (this=0x290de60, contact=0x2aae700, status=...)
    at /home/kde-devel/src/KDE/kdenetwork/kopete/libkopete/chatsessionmemberslistmodel.cpp:229
#14 0x00007fce21a95c80 in Kopete::ChatSessionMembersListModel::qt_metacall (this=0x290de60, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0x7fff889eee90)
    at /home/kde-devel/build/KDE/kdenetwork/kopete/libkopete/moc_chatsessionmemberslistmodel.cpp:89
#15 0x00007fce1ea9e7bd in QMetaObject::metacall (object=0x290de60, cl=QMetaObject::InvokeMetaMethod, idx=28, argv=0x7fff889eee90) at /home/kde-devel/src/qt/src/corelib/kernel/qmetaobject.cpp:237
#16 0x00007fce1eab210d in QMetaObject::activate (sender=0x2d8eb70, m=0x7fce21da06a0, local_signal_index=12, argv=0x7fff889eee90) at /home/kde-devel/src/qt/src/corelib/kernel/qobject.cpp:3272
#17 0x00007fce21ae2c15 in Kopete::ChatSession::onlineStatusChanged (this=0x2d8eb70, _t1=0x2aae700, _t2=..., _t3=...) at /home/kde-devel/build/KDE/kdenetwork/kopete/libkopete/kopetechatsession.moc:291
#18 0x00007fce21adf54a in Kopete::ChatSession::slotOnlineStatusChanged (this=0x2d8eb70, c=0x2aae700, status=..., oldStatus=...)
    at /home/kde-devel/src/KDE/kdenetwork/kopete/libkopete/kopetechatsession.cpp:124
#19 0x00007fce21ae2857 in Kopete::ChatSession::qt_metacall (this=0x2d8eb70, _c=QMetaObject::InvokeMetaMethod, _id=46, _a=0x7fff889ef0c0)
    at /home/kde-devel/build/KDE/kdenetwork/kopete/libkopete/kopetechatsession.moc:228
#20 0x00007fce0b919629 in WlmChatSession::qt_metacall (this=0x2d8eb70, _c=QMetaObject::InvokeMetaMethod, _id=50, _a=0x7fff889ef0c0)
    at /home/kde-devel/build/KDE/kdenetwork/kopete/protocols/wlm/wlmchatsession.moc:91
#21 0x00007fce1ea9e7bd in QMetaObject::metacall (object=0x2d8eb70, cl=QMetaObject::InvokeMetaMethod, idx=50, argv=0x7fff889ef0c0) at /home/kde-devel/src/qt/src/corelib/kernel/qmetaobject.cpp:237
#22 0x00007fce1eab210d in QMetaObject::activate (sender=0x2aae700, m=0x7fce21da0c80, local_signal_index=0, argv=0x7fff889ef0c0) at /home/kde-devel/src/qt/src/corelib/kernel/qobject.cpp:3272
#23 0x00007fce21af24e9 in Kopete::Contact::onlineStatusChanged (this=0x2aae700, _t1=0x2aae700, _t2=..., _t3=...) at /home/kde-devel/build/KDE/kdenetwork/kopete/libkopete/kopetecontact.moc:201
#24 0x00007fce21aee3d3 in Kopete::Contact::setOnlineStatus (this=0x2aae700, status=...) at /home/kde-devel/src/KDE/kdenetwork/kopete/libkopete/kopetecontact.cpp:171
#25 0x00007fce0b8f4633 in WlmContact::setOnlineStatus (this=0x2aae700, status=...) at /home/kde-devel/src/KDE/kdenetwork/kopete/protocols/wlm/wlmcontact.cpp:494
#26 0x00007fce0b8fc055 in WlmAccount::contactDisconnected (this=0x2aa6ee0, buddy=...) at /home/kde-devel/src/KDE/kdenetwork/kopete/protocols/wlm/wlmaccount.cpp:692
#27 0x00007fce0b901c1c in WlmAccount::qt_metacall (this=0x2aa6ee0, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0x7fff889ef490)
    at /home/kde-devel/build/KDE/kdenetwork/kopete/protocols/wlm/wlmaccount.moc:170
#28 0x00007fce1ea9e7bd in QMetaObject::metacall (object=0x2aa6ee0, cl=QMetaObject::InvokeMetaMethod, idx=29, argv=0x7fff889ef490) at /home/kde-devel/src/qt/src/corelib/kernel/qmetaobject.cpp:237
#29 0x00007fce1eab210d in QMetaObject::activate (sender=0x2bc42f8, m=0x7fce0bb3ea60, local_signal_index=28, argv=0x7fff889ef490) at /home/kde-devel/src/qt/src/corelib/kernel/qobject.cpp:3272
#30 0x00007fce0b90a1c1 in Callbacks::contactDisconnected (this=0x2bc42f8, _t1=...) at /home/kde-devel/build/KDE/kdenetwork/kopete/protocols/wlm/wlmlibmsn.moc:452
#31 0x00007fce0b907813 in Callbacks::buddyOffline (this=0x2bc42f8, conn=0x2bd1030, buddy=...) at /home/kde-devel/src/KDE/kdenetwork/kopete/protocols/wlm/wlmlibmsn.cpp:379
#32 0x00007fce0b63ee15 in MSN::NotificationServerConnection::handle_FLN(std::vector<std::string, std::allocator<std::string> >&) () from /usr/lib/libmsn.so.0.1
#33 0x00007fce0b63f7dd in MSN::NotificationServerConnection::handleIncomingData() () from /usr/lib/libmsn.so.0.1
#34 0x00007fce0b62ece5 in MSN::Connection::dataArrivedOnSocket() () from /usr/lib/libmsn.so.0.1
#35 0x00007fce0b90cb30 in WlmSocket::incomingData (this=0x2ab5fd0) at /home/kde-devel/src/KDE/kdenetwork/kopete/protocols/wlm/wlmsocket.cpp:147
#36 0x00007fce0b90cdad in WlmSocket::qt_metacall (this=0x2ab5fd0, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fff889f17c0)
    at /home/kde-devel/build/KDE/kdenetwork/kopete/protocols/wlm/wlmsocket.moc:79
#37 0x00007fce1ea9e7bd in QMetaObject::metacall (object=0x2ab5fd0, cl=QMetaObject::InvokeMetaMethod, idx=43, argv=0x7fff889f17c0) at /home/kde-devel/src/qt/src/corelib/kernel/qmetaobject.cpp:237
#38 0x00007fce1eab210d in QMetaObject::activate (sender=0x2ab5fd0, m=0x7fce1ede7ae0, local_signal_index=0, argv=0x0) at /home/kde-devel/src/qt/src/corelib/kernel/qobject.cpp:3272
#39 0x00007fce1eb0a1ed in QIODevice::readyRead (this=0x2ab5fd0) at .moc/debug-shared/moc_qiodevice.cpp:91
#40 0x00007fce1ff9c282 in QSslSocketPrivate::_q_readyReadSlot (this=0x2aba370) at /home/kde-devel/src/qt/src/network/ssl/qsslsocket.cpp:2121
#41 0x00007fce1ff9c698 in QSslSocket::qt_metacall (this=0x2ab5fd0, _c=QMetaObject::InvokeMetaMethod, _id=15, _a=0x7fff889f19b0) at .moc/debug-shared/moc_qsslsocket.cpp:121
#42 0x00007fce0b90cd5b in WlmSocket::qt_metacall (this=0x2ab5fd0, _c=QMetaObject::InvokeMetaMethod, _id=39, _a=0x7fff889f19b0)
    at /home/kde-devel/build/KDE/kdenetwork/kopete/protocols/wlm/wlmsocket.moc:74
#43 0x00007fce1ea9e7bd in QMetaObject::metacall (object=0x2ab5fd0, cl=QMetaObject::InvokeMetaMethod, idx=39, argv=0x7fff889f19b0) at /home/kde-devel/src/qt/src/corelib/kernel/qmetaobject.cpp:237
#44 0x00007fce1eab210d in QMetaObject::activate (sender=0x2c4bda0, m=0x7fce1ede7ae0, local_signal_index=0, argv=0x0) at /home/kde-devel/src/qt/src/corelib/kernel/qobject.cpp:3272
#45 0x00007fce1eb0a1ed in QIODevice::readyRead (this=0x2c4bda0) at .moc/debug-shared/moc_qiodevice.cpp:91
#46 0x00007fce1ff8022d in QAbstractSocketPrivate::canReadNotification (this=0x2abab90) at /home/kde-devel/src/qt/src/network/socket/qabstractsocket.cpp:626
#47 0x00007fce1ff8548e in QAbstractSocketPrivate::readNotification (this=0x2abab90) at /home/kde-devel/src/qt/src/network/socket/qabstractsocket_p.h:77
#48 0x00007fce1ff6fb55 in QAbstractSocketEngine::readNotification (this=0x2b9ac90) at /home/kde-devel/src/qt/src/network/socket/qabstractsocketengine.cpp:154
#49 0x00007fce1ff727e0 in QReadNotifier::event (this=0x2bf5660, e=0x7fff889f2280) at /home/kde-devel/src/qt/src/network/socket/qnativesocketengine.cpp:1089
#50 0x00007fce1d7d387c in QApplicationPrivate::notify_helper (this=0x24c3b50, receiver=0x2bf5660, e=0x7fff889f2280) at /home/kde-devel/src/qt/src/gui/kernel/qapplication.cpp:4253
#51 0x00007fce1d7d0f42 in QApplication::notify (this=0x7fff889f2630, receiver=0x2bf5660, e=0x7fff889f2280) at /home/kde-devel/src/qt/src/gui/kernel/qapplication.cpp:3663
#52 0x00007fce1f7c8753 in KApplication::notify (this=0x7fff889f2630, receiver=0x2bf5660, event=0x7fff889f2280) at /home/kde-devel/src/KDE/kdelibs/kdeui/kernel/kapplication.cpp:302
#53 0x00007fce1ea9753d in QCoreApplication::notifyInternal (this=0x7fff889f2630, receiver=0x2bf5660, event=0x7fff889f2280) at /home/kde-devel/src/qt/src/corelib/kernel/qcoreapplication.cpp:704
#54 0x00007fce20ceadeb in QCoreApplication::sendEvent(QObject*, QEvent*) () from /home/kde-devel/qt/lib/libQt3Support.so.4
#55 0x00007fce1eacbe93 in socketNotifierSourceDispatch (source=0x24c6ff0) at /home/kde-devel/src/qt/src/corelib/kernel/qeventdispatcher_glib.cpp:110
#56 0x00007fce17fa71fe in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#57 0x00007fce17faabb8 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#58 0x00007fce17faace0 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#59 0x00007fce1eacd3ac in QEventDispatcherGlib::processEvents (this=0x24c2af0, flags=...) at /home/kde-devel/src/qt/src/corelib/kernel/qeventdispatcher_glib.cpp:409
#60 0x00007fce1d8a25d8 in QGuiEventDispatcherGlib::processEvents (this=0x24c2af0, flags=...) at /home/kde-devel/src/qt/src/gui/kernel/qguieventdispatcher_glib.cpp:202
#61 0x00007fce1ea94d80 in QEventLoop::processEvents (this=0x7fff889f2590, flags=...) at /home/kde-devel/src/qt/src/corelib/kernel/qeventloop.cpp:149
#62 0x00007fce1ea94ed4 in QEventLoop::exec (this=0x7fff889f2590, flags=...) at /home/kde-devel/src/qt/src/corelib/kernel/qeventloop.cpp:197
#63 0x00007fce1ea97c02 in QCoreApplication::exec () at /home/kde-devel/src/qt/src/corelib/kernel/qcoreapplication.cpp:981
#64 0x00007fce1d7d0ae0 in QApplication::exec () at /home/kde-devel/src/qt/src/gui/kernel/qapplication.cpp:3572
#65 0x0000000000415b7f in main (argc=3, argv=0x7fff889f34a8) at /home/kde-devel/src/KDE/kdenetwork/kopete/kopete/main.cpp:105

Reported using DrKonqi
Comment 1 Alex Merry 2009-12-22 23:58:55 UTC
Created attachment 39271 [details]
New crash information added by DrKonqi:
---
Another backtrace, using KDE trunk from a few days ago.
Comment 2 Alex Merry 2009-12-23 00:16:25 UTC
Huh, I didn't realise I was adding to my own bug report.

Judging from the backtrace, this may be significant:

I added an MSN contact, and Kopete claimed that I was not on his contact list.  However, that didn't stop me from chatting to him (he initiated the chat after receiving notification that I had added him).
Comment 3 Mikko C. 2009-12-23 18:44:05 UTC
I can confirm this crash here, it happened more than once already. It seems random, there are no steps to reproduce it.
KDE trunk from Sun Dec 20 17:51.

[KCrash Handler]
#5  0x00007f3434d0e085 in raise () from /lib/libc.so.6
#6  0x00007f3434d0f4b0 in abort () from /lib/libc.so.6
#7  0x00007f34368ea4a4 in qt_message_output (msgType=QtFatalMsg, buf=<value optimized out>) at global/qglobal.cpp:2226
#8  0x00007f34368ea63e in qt_message (msgType=QtFatalMsg, msg=0x7f3436a59f30 "ASSERT: \"%s\" in file %s, line %d", ap=0x7fffd83eee70) at global/qglobal.cpp:2272
#9  0x00007f34368ea7f5 in qFatal (msg=0x78f <Address 0x78f out of bounds>) at global/qglobal.cpp:2455
#10 0x00007f34369e9b78 in QAbstractItemModel::beginRemoveRows (this=0x2e1d370, parent=..., first=-1, last=-1) at kernel/qabstractitemmodel.cpp:2443
#11 0x00007f34397b7f0e in Kopete::ChatSessionMembersListModel::slotContactRemoved (this=0x2e1d370, contact=<value optimized out>)
    at /var/tmp/paludis/kde-base-kopete-9999/work/kopete-9999/kopete/libkopete/chatsessionmemberslistmodel.cpp:220
#12 0x00007f34397b826b in Kopete::ChatSessionMembersListModel::slotContactStatusChanged (this=0x2e1d370, contact=0x2612080, status=<value optimized out>)
    at /var/tmp/paludis/kde-base-kopete-9999/work/kopete-9999/kopete/libkopete/chatsessionmemberslistmodel.cpp:229
#13 0x00007f343973db01 in Kopete::ChatSessionMembersListModel::qt_metacall (this=0x2e1d370, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffd83ef1d0)
    at /var/tmp/paludis/kde-base-kopete-9999/work/kopete-9999_build/kopete/libkopete/moc_chatsessionmemberslistmodel.cpp:89
#14 0x00007f3436a07745 in QMetaObject::activate (sender=0x2c6e490, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0xffffffffffffffff) at kernel/qobject.cpp:3286
#15 0x00007f343977777c in Kopete::ChatSession::onlineStatusChanged (this=0x78f, _t1=0x2612080, _t2=<value optimized out>, _t3=<value optimized out>)
    at /var/tmp/paludis/kde-base-kopete-9999/work/kopete-9999_build/kopete/libkopete/kopetechatsession.moc:291
#16 0x00007f343977a0da in Kopete::ChatSession::qt_metacall (this=0x2c6e490, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffd83ef360)
    at /var/tmp/paludis/kde-base-kopete-9999/work/kopete-9999_build/kopete/libkopete/kopetechatsession.moc:228
#17 0x00007f3426a1e3b5 in WlmChatSession::qt_metacall (this=0x78f, _c=1935, _id=6, _a=0xffffffffffffffff)
    at /var/tmp/paludis/kde-base-kopete-9999/work/kopete-9999_build/kopete/protocols/wlm/wlmchatsession.moc:91
#18 0x00007f3436a07745 in QMetaObject::activate (sender=0x2612080, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0xffffffffffffffff) at kernel/qobject.cpp:3286
#19 0x00007f34397835d9 in Kopete::Contact::onlineStatusChanged (this=0x78f, _t1=0x2612080, _t2=<value optimized out>, _t3=<value optimized out>)
    at /var/tmp/paludis/kde-base-kopete-9999/work/kopete-9999_build/kopete/libkopete/kopetecontact.moc:201
#20 0x00007f343978463d in Kopete::Contact::slotAccountIsConnectedChanged (this=0x2612080) at /var/tmp/paludis/kde-base-kopete-9999/work/kopete-9999/kopete/libkopete/kopetecontact.cpp:207
#21 0x00007f3439785b4d in Kopete::Contact::qt_metacall (this=0x2612080, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffd83ef590)
    at /var/tmp/paludis/kde-base-kopete-9999/work/kopete-9999_build/kopete/libkopete/kopetecontact.moc:152
#22 0x00007f3426a00d59 in WlmContact::qt_metacall (this=0x78f, _c=1935, _id=6, _a=0xffffffffffffffff)
    at /var/tmp/paludis/kde-base-kopete-9999/work/kopete-9999_build/kopete/protocols/wlm/wlmcontact.moc:102
#23 0x00007f3436a07745 in QMetaObject::activate (sender=0x2598390, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0xffffffffffffffff) at kernel/qobject.cpp:3286
#24 0x00007f343976c531 in Kopete::Account::slotOnlineStatusChanged (this=0x2598390, newStatus=..., oldStatus=<value optimized out>)
    at /var/tmp/paludis/kde-base-kopete-9999/work/kopete-9999/kopete/libkopete/kopeteaccount.cpp:536
#25 0x00007f343976df7c in Kopete::Account::qt_metacall (this=0x2598390, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffd83ef870)
    at /var/tmp/paludis/kde-base-kopete-9999/work/kopete-9999_build/kopete/libkopete/kopeteaccount.moc:157
#26 0x00007f34397a7875 in Kopete::PasswordedAccount::qt_metacall (this=0x78f, _c=1935, _id=6, _a=0xffffffffffffffff)
    at /var/tmp/paludis/kde-base-kopete-9999/work/kopete-9999_build/kopete/libkopete/kopetepasswordedaccount.moc:70
#27 0x00007f3426a0aaf8 in WlmAccount::qt_metacall (this=0x78f, _c=1935, _id=6, _a=0xffffffffffffffff)
    at /var/tmp/paludis/kde-base-kopete-9999/work/kopete-9999_build/kopete/protocols/wlm/wlmaccount.moc:163
#28 0x00007f3436a07745 in QMetaObject::activate (sender=0x260e990, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0xffffffffffffffff) at kernel/qobject.cpp:3286
#29 0x00007f34397835d9 in Kopete::Contact::onlineStatusChanged (this=0x78f, _t1=0x260e990, _t2=<value optimized out>, _t3=<value optimized out>)
    at /var/tmp/paludis/kde-base-kopete-9999/work/kopete-9999_build/kopete/libkopete/kopetecontact.moc:201
#30 0x00007f34397866da in Kopete::Contact::setOnlineStatus (this=0x260e990, status=...) at /var/tmp/paludis/kde-base-kopete-9999/work/kopete-9999/kopete/libkopete/kopetecontact.cpp:171
#31 0x00007f3426a0645c in WlmAccount::NotificationServerConnectionTerminated (this=0x2598390, conn=<value optimized out>)
    at /var/tmp/paludis/kde-base-kopete-9999/work/kopete-9999/kopete/protocols/wlm/wlmaccount.cpp:1392
#32 0x00007f3426a0acd5 in WlmAccount::qt_metacall (this=0x2598390, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffd83efae0)
    at /var/tmp/paludis/kde-base-kopete-9999/work/kopete-9999_build/kopete/protocols/wlm/wlmaccount.moc:185
#33 0x00007f3436a07745 in QMetaObject::activate (sender=0x2648fd8, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0xffffffffffffffff) at kernel/qobject.cpp:3286
#34 0x00007f3426a11112 in Callbacks::NotificationServerConnect
Comment 4 Roman Jarosz 2009-12-24 13:05:03 UTC
SVN commit 1065811 by rjarosz:

If contact isn't in member list, skip remove. It shouldn't happen but somehow it does.

BUG: 217430


 M  +5 -0      chatsessionmemberslistmodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1065811
Comment 5 Roman Jarosz 2009-12-25 14:18:12 UTC
*** Bug 217850 has been marked as a duplicate of this bug. ***
Comment 6 Dario Andres 2010-01-29 00:15:35 UTC
*** Bug 224661 has been marked as a duplicate of this bug. ***