If contact isn't in member list, skip remove. It shouldn't happen but somehow it does.

BUG: 217430

svn path=/trunk/KDE/kdenetwork/kopete/; revision=1065811